--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,25 @@
     <title>COC Clan Manager Tool</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/app.css" type="text/css">
+
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+
 </head>
 <body ng-controller="AppCtrl">
 aaaa
 <div class="app" id="app"
      ng-class="{'app-header-fixed':app.settings.headerFixed, 'app-aside-fixed':app.settings.asideFixed, 'app-aside-folded':app.settings.asideFolded, 'app-aside-dock':app.settings.asideDock, 'container':app.settings.container}"
      ui-view></div>
+
+<script>
+    $.get( '/main/' + clanID, function( data ) {
+        if (data === false) {
+            $( '.result' ).html( 'Oh no! something went wrong' );
+        } else {
+            let formatter = new JSONFormatter(JSON.parse( data ));
+            $( '.result' ).html( formatter.render() );
+        }
+    });
+</script>
 </body>
 </html>
