--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@ aaaa
      ui-view></div>
 
 <script>
-    $.get( '/main/' + clanID, function( data ) {
+    $.get( '/main/' + '90LJ2QUP', function( data ) {
         if (data === false) {
             $( '.result' ).html( 'Oh no! something went wrong' );
         } else {
