--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,14 @@ aaaa
 
 <script>
     $.get( '/main/' + '90LJ2QUP', function( data ) {
-        if (data === false) {
-            $( '.result' ).html( 'Oh no! something went wrong' );
-        } else {
-            let formatter = new JSONFormatter(JSON.parse( data ));
-            $( '.result' ).html( formatter.render() );
-        }
+        console.log(data)
+
+//        if (data === false) {
+//            $( '.result' ).html( 'Oh no! something went wrong' );
+//        } else {
+//            let formatter = new JSONFormatter(JSON.parse( data ));
+//            $( '.result' ).html( formatter.render() );
+//        }
     });
 </script>
 </body>
